[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Images/Stop.svg" type="Texture" id=2]
[ext_resource path="res://Images/Play.svg" type="Texture" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Images/Loop.svg" type="Texture" id=5]

[node name="Main" type="Node"]
script = ExtResource( 1 )
mode = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MainBody" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="MainBody"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="MainBody/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="BodyMargin" type="MarginContainer" parent="MainBody/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="Body" type="VBoxContainer" parent="MainBody/PC/BodyMargin"]
margin_right = 1010.0
margin_bottom = 586.0

[node name="Player" type="MarginContainer" parent="MainBody/PC/BodyMargin/Body"]
margin_right = 1010.0
margin_bottom = 114.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainBody/PC/BodyMargin/Body/Player"]

[node name="Options" type="VBoxContainer" parent="MainBody/PC/BodyMargin/Body/Player"]
margin_right = 1010.0
margin_bottom = 114.0

[node name="Playing" type="MarginContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options"]
margin_right = 1010.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="TrackInfo" type="VBoxContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options/Playing"]
margin_left = 5.0
margin_right = 1005.0
margin_bottom = 48.0

[node name="NowPlaying" type="Label" parent="MainBody/PC/BodyMargin/Body/Player/Options/Playing/TrackInfo"]
margin_right = 1000.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Now Playing:
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="TrackName" type="Label" parent="MainBody/PC/BodyMargin/Body/Player/Options/Playing/TrackInfo"]
margin_top = 26.0
margin_right = 1000.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="HSeparator" type="HSeparator" parent="MainBody/PC/BodyMargin/Body/Player/Options"]
margin_top = 52.0
margin_right = 1010.0
margin_bottom = 56.0

[node name="Select" type="MarginContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options"]
margin_top = 60.0
margin_right = 1010.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PC" type="PanelContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select"]
margin_right = 1010.0
margin_bottom = 54.0

[node name="Panel" type="Panel" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 47.0

[node name="Body" type="HBoxContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 47.0

[node name="Play" type="Button" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_right = 99.0
margin_bottom = 40.0
size_flags_horizontal = 3
disabled = true
text = "Play"
icon = ExtResource( 3 )
align = 0

[node name="VSeparator" type="VSeparator" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 103.0
margin_right = 107.0
margin_bottom = 40.0

[node name="Stop" type="Button" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 111.0
margin_right = 210.0
margin_bottom = 40.0
size_flags_horizontal = 3
disabled = true
text = "Stop"
icon = ExtResource( 2 )
align = 0

[node name="VSeparator2" type="VSeparator" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 214.0
margin_right = 218.0
margin_bottom = 40.0

[node name="TextM" type="MarginContainer" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 222.0
margin_right = 819.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="TrackText" type="Label" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body/TextM"]
margin_left = 5.0
margin_right = 592.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
autowrap = true

[node name="RandomButton" type="CheckButton" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 823.0
margin_right = 955.0
margin_bottom = 40.0
text = "Random"

[node name="VSeparator3" type="VSeparator" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 959.0
margin_right = 963.0
margin_bottom = 40.0

[node name="Refresh" type="Button" parent="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body"]
margin_left = 967.0
margin_right = 995.0
margin_bottom = 40.0
disabled = true
icon = ExtResource( 5 )

[node name="HSeparator" type="HSeparator" parent="MainBody/PC/BodyMargin/Body"]
margin_top = 118.0
margin_right = 1010.0
margin_bottom = 122.0

[node name="List" type="ScrollContainer" parent="MainBody/PC/BodyMargin/Body"]
margin_top = 126.0
margin_right = 1010.0
margin_bottom = 586.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Musics" type="GridContainer" parent="MainBody/PC/BodyMargin/Body/List"]
margin_right = 1010.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="track_finished" from="MainBody/PC/BodyMargin/Body/Player" to="." method="_on_Player_track_finished"]
[connection signal="finished" from="MainBody/PC/BodyMargin/Body/Player/AudioStreamPlayer" to="MainBody/PC/BodyMargin/Body/Player" method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body/Stop" to="." method="_on_Stop_pressed"]
[connection signal="toggled" from="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body/RandomButton" to="." method="_on_RandomButton_toggled"]
[connection signal="pressed" from="MainBody/PC/BodyMargin/Body/Player/Options/Select/PC/Body/Refresh" to="." method="_on_Refresh_pressed"]
